--- a/package.json
+++ b/package.json
@@ -25,21 +25,28 @@
         "analyze": "source-map-explorer 'build/static/js/*.js'"
     },
     "dependencies": {
+        "@ant-design/icons": "^4.6.3",
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
+        "@solana/wallet-adapter-ant-design": "^0.8.1",
         "@solana/wallet-adapter-base": "^0.6.0",
         "@solana/wallet-adapter-bitpie": "^0.2.1",
+        "@solana/wallet-adapter-example": "^0.13.1",
+        "@solana/wallet-adapter-material-ui": "^0.12.4",
         "@solana/wallet-adapter-react": "^0.12.5",
         "@solana/wallet-adapter-react-ui": "^0.5.1",
         "@solana/wallet-adapter-wallets": "^0.10.1",
         "@solana/web3.js": "^1.29.2",
+        "notistack": "^1.0.10",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hot-toast": "^2.1.1"
     },
     "devDependencies": {
         "@craco/craco": "^6.3.0",
-        "@types/node": "^12.0.0",
+        "@types/node": "^12.20.33",
         "@types/react": "^17.0.24",
-        "@types/react-dom": "^17.0.0",
+        "@types/react-dom": "^17.0.9",
         "react-scripts": "^4.0.3",
         "source-map-explorer": "^2.5.2",
         "typescript": "^4.4.3",
