--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@ant-design/icons": "^4.6.3",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
+        "@solana/spl-token": "^0.1.8",
         "@solana/wallet-adapter-ant-design": "^0.8.1",
         "@solana/wallet-adapter-base": "^0.6.0",
         "@solana/wallet-adapter-bitpie": "^0.2.1",
